force-app/main/default/objects/Asset/fields/CarrierAddressId__c.field-meta.xml
<CustomField>
    <fullName>CarrierAddressId__c</fullName>
    <label>CarrierAddressId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>