force-app/main/default/objects/Asset/fields/MaxBandwidth__c.field-meta.xml
<CustomField>
    <fullName>MaxBandwidth__c</fullName>
    <description>Used to store the maximum bandwidth available</description>
    <label>maximale Bandbreite</label>
    <length>4</length>
    <type>Text</type>
</CustomField>