force-app/main/default/objects/Asset/fields/PartnerContractID__c.field-meta.xml
<CustomField>
    <fullName>PartnerContractID__c</fullName>
    <formula>vlocity_cmt__ContractId__r.PartnerContractID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partnervertrags-ID</label>
    <type>Text</type>
</CustomField>