force-app/main/default/objects/Asset/fields/PlusNet_Contract_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>PlusNet_Contract_Line_Id__c</fullName>
    <label>PlusNet Contract Line Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>