force-app/main/default/objects/Asset/fields/PlusNet_End_Of_Minimum_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>PlusNet_End_Of_Minimum_Contract_Term__c</fullName>
    <formula>DATETIMEVALUE(ADDMONTHS(vlocity_cmt__ActivationDate__c,vlocity_cmt__ContractId__r.ContractTerm) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ende Mindestvertragslaufzeit</label>
    <type>Date</type>
</CustomField>