force-app/main/default/objects/Asset/fields/PlusNet_SubscriptionId__c.field-meta.xml
<CustomField>
    <fullName>PlusNet_SubscriptionId__c</fullName>
    <label>PlusNet Subscription Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>