force-app/main/default/objects/Asset/validationRules/x01_Asset_Activation_Date_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>x01_Asset_Activation_Date_Rule</fullName>
    <active>true</active>
    <description>Validation Rule for Asset Activation Date. It should not be in the past.</description>
    <errorConditionFormula>AND(vlocity_cmt__ActivationDate__c&lt;TODAY(),NOT(ISPICKVAL($User.UserType, &apos;AutomatedProcess&apos;))) &amp;&amp; (NOT(ISCHANGED(vlocity_cmt__CatalogItemReferenceDateTime__c)) || ISCHANGED(vlocity_cmt__ActivationDate__c)) &amp;&amp; (NOT(ISCHANGED(vlocity_cmt__ProductHierarchyGroupKeyPath__c)) || ISCHANGED(vlocity_cmt__ActivationDate__c))</errorConditionFormula>
    <errorDisplayField>vlocity_cmt__ActivationDate__c</errorDisplayField>
    <errorMessage>Activation Date cannot be in the past (Error x01).</errorMessage>
</ValidationRule>