force-app/main/default/objects/Asset/listViews/Meine_Assets.listView-meta.xml
<ListView>
    <fullName>Meine_Assets</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ASSET.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>vlocity_cmt__Action__c</columns>
    <columns>vlocity_cmt__ActivationDate__c</columns>
    <columns>vlocity_cmt__ServiceAccountId__c</columns>
    <columns>vlocity_cmt__PremisesId__c</columns>
    <columns>vlocity_cmt__OrderId__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>ASSET.LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>Meine Assets</label>
</ListView>